-update some citation formatting -split data man. section privacy and access -update data man. to get rid of serotiny and include bark thickness -update dissertation abs. -update summary: data is plural -remove unnecessary text for spacing -number the hypothesis in order and refer across questions -update biosketch

--- a/NSFbio.tex
+++ b/NSFbio.tex
@@ -96,8 +96,8 @@
 	\item{Designed and implemented informatic pipeline and data acquisition system for the VCU Vaginal Human Microbiome 
 	Project, currently supporting \num{1962} samples of 53 million 454 sequencing reads (23 billion base pairs).  Data 
 	are housed in a PostgreSQL database and made available via a Java-based web portal.}
-	\item{Developed quality control metrics and the genomes of three antibiotic resistant \textit{S. aureus} strains using Illumina reads. 
-	Comparative genomic analyses identified several SNPs associated with the resistant phenotype.}
+	\item{Developed quality control metrics and assembled the genomes of three antibiotic resistant \textit{S. aureus} 
+	strains using Illumina reads.  Comparative genomic analyses identified several SNPs associated with the resistant phenotype.}
 	\item{Created custom software to visually and statistically analyze microarray data.\\
 	 \url{http://sledride.csbc.vcu.edu}}
 	\item{Responsible for the design and implementation of multi-million dollar, enterprise-class systems involving 
