--- a/NSFsumm.tex
+++ b/NSFsumm.tex
@@ -40,7 +40,7 @@ species of  \emph{Arabidopsis}.
 In short, this study seeks to investigate the same phenomena in a quantitative, economically and 
 environmentally-important, quantitative trait in four species of related plants at multiple evolutionary time scales.  Additionally, 
 the genomic resources developed in this project will augment and facilitate knowledge transfer of genomic data in non-model 
-species which, until recently, has been technologically out of reach.
+species which, until recently, have been technologically out of reach.
 
 
 \required{Broader Impacts}
