--- a/refs.bib
+++ b/refs.bib
@@ -843,10 +843,15 @@ url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=17
 author = {Morell, V},
 title = {{TreeBASE: the roots of phylogeny}},
 journal = {Science},
+year = {1996},
 volume = {273},
+number = {5275},
 pages = {569},
-url={http://treebase.org}
+month = aug,
+url={http://www.treebase.org}
 }
+
+
 
 @article{Benson:2012kf,
 author = {Benson, Dennis A and Karsch-Mizrachi, Ilene and Clark, Karen and Lipman, David J and Ostell, James and Sayers, Eric W},
