--- a/NSFrefs.tex
+++ b/NSFrefs.tex
@@ -15,5 +15,5 @@
 %    Arcs}, Journal at the End of the Rainbow, 2005.
 %\end{thebibliography}
 
-\bibliographystyle{myunsrtnat}
+\bibliographystyle{abbrvnat}
 \bibliography{refs}
