-remove redundant initials from bib

--- a/refs.bib
+++ b/refs.bib
@@ -225,7 +225,7 @@ url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=18
 }
 
 @article{Eckert:2012go,
-author = {Eckert, Andrew J AJ and Dyer, Rodney J RJ},
+author = {Eckert, Andrew J and Dyer, Rodney J},
 title = {{Defining the landscape of adaptive genetic diversity.}},
 journal = {Molecular Ecology},
 year = {2012},
@@ -249,7 +249,7 @@ url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=22
 }
 
 @article{Keeley:2011jw,
-author = {Keeley, Jon E JE and Pausas, Juli G JG and Rundel, Philip W PW and Bond, William J WJ and Bradstock, Ross A RA},
+author = {Keeley, Jon E and Pausas, Juli G and Rundel, Philip W and Bond, William J and Bradstock, Ross A},
 title = {{Fire as an evolutionary pressure shaping plant traits.}},
 journal = {Trends in Plant Science},
 year = {2011},
@@ -261,7 +261,7 @@ url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21
 }
 
 @article{Grotkopp:2004hi,
-author = {Grotkopp, Eva E and Rejm{\'a}nek, Marcel M and Sanderson, Michael J MJ and Rost, Thomas L TL},
+author = {Grotkopp, Eva and Rejm{\'a}nek, Marcel and Sanderson, Michael J and Rost, Thomas L},
 title = {{Evolution of genome size in pines (\emph{Pinus}) and its life-history correlates: supertree analyses.}},
 journal = {Evolution},
 year = {2004},
@@ -571,7 +571,7 @@ url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=20
 }
 
 @article{You:2012iy,
-author = {You, Na N and Murillo, Gabriel G and Su, Xiaoquan X and Zeng, Xiaowei X and Xu, Jian J and Ning, Kang K and Zhang, Shoudong S and Zhu, Jiankang J and Cui, Xinping X},
+author = {You, Na and Murillo, Gabriel and Su, Xiaoquan and Zeng, Xiaowei and Xu, Jian and Ning, Kang and Zhang, Shoudong and Zhu, Jiankang and Cui, Xinping},
 title = {{SNP calling using genotype model selection on high-throughput sequencing data.}},
 journal = {Bioinformatics},
 year = {2012},
