-grammar edits in description -rearrange citation -grammar change in summary -grammar change in dissertation abs

--- a/NSFsumm.tex
+++ b/NSFsumm.tex
@@ -13,8 +13,7 @@ and long leaf pine (\textit{P.\ palustris}).  Next generation sequencing (NGS) o
 species (25 x 20 x 4 = 2000 total individuals) will be used to genotype individuals with the goal of uncovering shared 
 genetic architecture of these four closely related species. The results of this research, while also providing new genomic 
 resources for non-model species and augmenting exiting resources, will not only address fundamental principles in 
-evolutionary biology, but also serve to inform and improve breeding programs and land management initiatives in 
-light of global climate change.  
+evolutionary biology, but also serve to inform and improve breeding programs and land management initiatives.
 
 Fire has played an important role in the evolutionary paths of many adaptive traits in plants, across a wide variety of species 
 and habitats.  Extant \textit{Pinaceae} species occupy a variety of habitats across North and Central America, Asia, and Europe.  
@@ -31,7 +30,7 @@ important plant genomes}.
 % knowledge in the field of mathematics. 
 By focusing on the dissection of an adaptive trait at both microevolutionary and macroevolutionary 
 time scales, this study will address a fundamental principle in evolutionary biology: the mechanism 
-associated with the vast majority of incomplete lineage sorting among populations related species.  
+associated with the vast majority of incomplete lineage sorting among populations of closely related species.  
 The rise of shared phenotypes between related species has been a source of debate for many years, dividing 
 into camps supporting either ancient inherited polymorphisms or multiple instances of convergent evolution.  Very recently, 
 \citet{Segurel:vf} showed that the ABO blood group antigens in humans are the result of vertical inheritance 
