--- a/NSFsuppl.tex
+++ b/NSFsuppl.tex
@@ -49,7 +49,7 @@ highly-dimensional dataset (tens of samples, thousands of OTUs), result in a sig
 \citep{Friedline:2012fm}. I demonstrate that, in some cases, up to \SI{80}{\percent} of the most abundant OTUs may be removed while 
 still recovering the same community relationships; this indicates these metrics are biased toward the highly abundant OTUs.  I 
 will demonstrate that the observed patterns of OTU abundance detected from microbial communities can be properly 
-modeled using techniques similar to those we used to model the presence and absence of genes in genome 
+modeled using techniques similar to those used to model the presence and absence of genes in genome 
 evolution \citep{Lake:2004cy, Rivera:2004ct}.  Using simulation studies, I demonstrate that general Markov models 
 in a Bayesian inference framework outperform traditional, multivariate ecological methods in recovering true community 
 structure.  Applying this new methodology to Atlantic Ocean microbial communities allowed us to uncover a distance-decay 
