--- a/NSFdesc.tex
+++ b/NSFdesc.tex
@@ -42,14 +42,14 @@ He:2012bz,Parchman:2012ca}, but also impacting carbon storage and climate \citep
 Understanding the underlying genetic architecture 
 associated with fire-associated traits is therefore critical to dealing with environmental impacts of increased carbon inputs and 
 changing climate.  \citet{He:2012bz} recently investigated five fire-adapted traits for 101 species of \emph{Pinus} and found evidence 
-for a strong influence of fire in the Cretaceous on trait evolution.  However, they considered only presence or absence the traits in 
+for a strong influence of fire in the Cretaceous on trait evolution.  However, they considered only presence or absence of the traits in 
 their study.  \textbf{There have been no studies to date which capture, as in this proposal, the quantitative nature of fire-associated trait 
 evolution in these species.} 
 
 Plants display strong patterns of adaptation, especially local adaptation, when populations sizes are large \citep{Leimu:2008fb}.
 This characteristic is especially important in conifers, which display a lack of population structure and large effective population 
 sizes \citep{Neale:2004hi}; this is partly why association genetic studies have been so successful in these species 
-\citep{Eckert:2012cw,Eckert:2010hd, Wegrzyn:2010dd,Eckert:2009hh,GonzalezMartinez:2007gy,GonzalezMartinez:2006ij,Gupta:2005fx}.
+\citep{Gupta:2005fx,GonzalezMartinez:2006ij,GonzalezMartinez:2007gy, Eckert:2009hh, Wegrzyn:2010dd, Eckert:2010hd,Eckert:2012cw}.
 
 The PI will investigate the genetic architecture of a complex phenotype in 2000 trees from four, economically-important 
 species of pines with a range along the eastern and south-eastern United States (25 trees from 20 populations for each species).
@@ -65,7 +65,7 @@ bark thickness from a model (see Phase 1), therefore holds tremendous economic p
 thickness can help inform breeding plans to breed to desired bark thickness to minimize loss.
 
 The application of next-generation sequencing technology to conifer genomes, as proposed in this study, holds the promise of 
-being able to provide a way to dissect the genetic architecture of an adaptive, and quantitative trait.  Until recently, techniques 
+being able to provide a way to dissect the genetic architecture of an adaptive trait.  Until recently, techniques 
 to consider adaptation on a genomic scale have been no match for the size and complexity of conifer genomes \citep{Mackay:2012hr}.  
 \begin{wrapfigure}{r}{0.5\textwidth}
 	\begin{ganttchart}[vgrid,
@@ -83,7 +83,7 @@ to consider adaptation on a genomic scale have been no match for the size and co
 \label{f:timeline}
 \end{wrapfigure}
 However, advances in genomic enrichment techniques such as those by \citet{Parchman:2012ca} and \citet{Willing:2011jb} and 
-the ever-decreasing cost of DNA sequencing have facilitated studies to use genotype-by-sequencing (GBS) approaches to 
+the ever-decreasing cost of DNA sequencing have facilitated the use of new genotype-by-sequencing (GBS) approaches to 
 answering fundamental questions in evolutionary biology in non-model species.  \textbf{The PI is well-positioned to utilize the 
 sophistication of the sequencing facilities at VCU coupled with his backgrounds in evolutionary, molecular, and 
 computational biology to study how bark thickness has evolved across \emph{Pinus} and how this knowledge may serve to 
@@ -96,8 +96,8 @@ of excellent faculty collaborators with extensive experience in phylogenetics an
 landscape genetics (Dr. Rodney J. Dyer).  The research and teaching experience gained in this project will position the PI to 
 competitively seek a future tenure-track position at a tier 1 research institution.      
 
-This study is laid out below in three general phases: (1) field sampling, (2) DNA sequencing and bioinformatics, and (3) 
-hypothesis testing.  A projected timeline for this project is shown in Figure \ref{f:timeline}.
+This study is laid out below in three general phases: (1) field sampling and library preparation, (2) DNA sequencing and bioinformatics, 
+and (3) statistical analysis and hypothesis testing.  A projected timeline for this project is shown in Figure \ref{f:timeline}.
 
 \subsection*{Phase 1: Collect field samples, extract genomic DNA, and prepare sequencing libraries}
 
@@ -108,7 +108,7 @@ species (Figure \ref{f:range}).  The locations of each population will be determ
 of the focal species will be chosen and all other members will be chosen to be at least \SI{50}{m} from the first sampling 
 location to avoid sampling close relatives.  Only trees with diameter at breast height (\SI{1.25}{m} above ground; DBH) of at least 
 \SI{15}{cm} will be sampled. All efforts will be made to sample adult trees with similar DBHs, so as to standardize ages within sites.
-Three to five needle fascicles will be collected at each from each tree for use in DNA extraction.  Needles, with a desiccant, 
+Three to five needle fascicles will be collected from each tree for use in DNA extraction.  Needles, with a desiccant, 
 will be stored in \SI{15}{\ml} Falcon\texttrademark\ tubes  at ambient temperatures in the field and in \SI{-80}{\celsius}, 
 long-term in the laboratory.  
 
@@ -116,14 +116,14 @@ Bark thickness will be treated as a quantitative character in all downstream ana
 random locations around DBH.  Measurements of bark thickness will be taken using a 
 Hagl\"{o}ff\textsuperscript{\textregistered} bark gauge, and height of the tree will be measured using a clinometer.  These values 
 will also be used to obtain the best possible regression model for future studies in these species, using the 
-regression equation from \citeauthor{Cao:1986th}.  Including these covariates has been shown to significantly decrease estimation
+regression equation from \citet{Cao:1986th}; including these covariates has been shown to significantly decrease estimation
 bias by up to \SI{43}{\percent} in some species \citep{Li:2010bl}.  At the end of sampling, \num{2000} individual tubes of 
 needles (20--25 needles/tube) will be banked along with bark thickness measurements and estimates for all trees for all species.
 
 \paragraph{DNA extraction}
 Genomic DNA will be extracted from leaf tissue Qiagen DNEasy extraction kits in a 96-well format using an existing tissue preparation
-protocol in the Eckert lab located at VCU.  A single DNA extraction from multiple leaves per individual will be performed resulting in \num{2000} 
-individual genomic DNA extracts.  
+protocol in the Eckert lab located at VCU.  A single DNA extraction from multiple needles per individual will be performed for each sampled 
+tree.
 
 \paragraph{Criteria for completion}
 Phase 1 will be designated complete when genomic DNA has been extracted for all \num{2000} individuals.  
@@ -133,7 +133,7 @@ that will also house sequencing and genotyping data from phase 2.  It is estimat
 \subsection*{Phase 2: Perform sequencing of 2000 individuals and bioinformatic analysis}
 
 The PI will perform genotype-by-sequencing (GBS) utilizing the highly-multiplexed, next-generation sequencing capability of the 
-Illumina HiSeq 2000 platform.  Genomic enrichment will be performed using the approach approach outlined in 
+Illumina HiSeq 2000 platform.  Genomic enrichment will be performed using the approach outlined in 
 \cite{Parchman:2012ca}, in order to ensure high-coverage of the library given the complexity and size of conifer genomes 
 \citep{Mackay:2012hr}.  Additionally, each individual will be associated with a computationally-correctable sequencing 
 barcode \citep{Roche454MID}.  
@@ -179,7 +179,7 @@ in any of the four species.
 commonly used in genome-wide association studies (GWAS; \citet{Yu:2006ij}). Association analysis has been widely 
 used for dissecting the genetic basis of phenotypes for conifers \citep{Neale:2011jh, Ingvarsson:2011fg}. 
 In addition, the PI will explore the use of the Bayesian models presented by \citet{Parchman:2012ca}, which 
-was the first GWAS for a conifer, and regression tree approaches presented by \citet{Holliday:2012fz}. 
+was the first GWAS for a conifer, and the regression tree approaches presented by \citet{Holliday:2012fz}. 
 Linear models will be used to explicitly test the effects of genotypic class of each discovered SNP on quantitative 
 measures of bark thickness for each species.  Multiple tests will be accounted for using a minimum \emph{P}-value approach 
 \citep{Conneely:2007ga}.
@@ -212,9 +212,9 @@ levels of long-term gene flow between loblolly and slash pines using multiple ra
 isolation-with-migration model \citep{Becquet:2007js} detected low but significant levels of gene flow over the divergence history 
 of these species (unpublished data, $4 N_{e}m = 2.5$ with a \SI{95}{\percent} confidence interval of 0.52--5.14). The sets of loci 
 randomly sampled from the unassociated loci will be assumed to largely reflect these processes, so that the 
-enrichment of allele sharing at loci associated to a trait such as bark thickness with clear adaptive relevance 
-\citep{He:2012bz} would imply additional processes such as natural selection, as in \cite{Segurel:vf}, in promoting allele 
-sharing among species.
+enrichment of allele sharing at loci associated to a trait such as bark thickness, with clear adaptive relevance 
+\citep{He:2012bz}, would imply additional processes such as natural selection, as in \citet{Segurel:vf} and 
+\citet{Roux:2012eb}, in promoting allele sharing among species.
 
 \paragraph{Expected outcomes and relevance} ${H_0}^2$ will be rejected when multiple SNPs associated 
 with bark thickness are shared across species. The relevance of this result would be to establish the shared genetic 
@@ -223,9 +223,8 @@ shared across the four focal species lies in the upper \SI{1}{\percent} tail of 
 unassociated SNPs. A significant result would support the existence of a process beyond incomplete lineage sorting, 
 admixture, and gene flow that is contributing to the maintenance of shared alleles across the four focal species. 
 
-\subsubsection*{Question 3: Are reconstructed allele frequencies at shared SNPs that are associated with bark thickness 
-correlated more so with reconstructed bark thickness than randomly selected shared SNPs that are unassociated with bark 
-thickness across the phylogeny for these four species?}
+\subsubsection*{Question 3: Are reconstructed allele frequences at shared candidate SNPs correlated more so with 
+reconstructed bark thickness than shared control SNPs across the phylogeny for these four species?}
 
 \paragraph{Null hypothesis} ${H_0}^4$: Correlations between reconstructed allele frequencies at shared SNPs associated with 
 bark thickness and reconstructed values of bark thickness are no larger than those for reconstructed allele frequencies at 
@@ -255,15 +254,17 @@ this would suggest non-neutral processes driving this difference.
 \paragraph{Null hypothesis} ${H_0}^5$: There is no evidence of selection in genes containing SNPs that are significantly associated 
 with bark thickness.
 
-\paragraph{Methods} As the loblolly pine genome continue to improve, establishing the genomic context of 
-bark thickness-associated SNPs will enable the PI to test for evidence of selection in polymorphic, protein coding genes.  
-From the results stemming from Questions ${H_0}^2$ and ${H_0}^3$, the PI will select 10 up to 20 SNPs from subsets of 
-candidate and control loci from each population for each species exhibiting similar attributes (e.g., average heterozygosity).   
-Using genomic position of SNPs and the loblolly genome annotations, the PI will design PCR primers to amplify the protein 
-coding regions from each tree, and each amplicon will be sent for Sanger sequencing.  Once the sequences have been 
-obtained and translated to amino acids, they will be aligned at the amino acid level using standard tools such as MAFFT 
-\citep{Katoh:2005ia} or MUSCLE \citep{Edgar:2004ic}.  From the alignment (back-translated to DNA), $d_N/d_S$ will be 
-estimated, per locus and per site per locus, using established maximum likelihood methods \citep{Yang:2007ki}.
+\paragraph{Methods} As the sequence resource, including annotations, for the loblolly pine genome continue to improve, 
+establishing the genomic context of bark thickness-associated SNPs will enable the PI to test for evidence of selection in 
+polymorphic, protein coding genes.  From the results stemming from Questions ${H_0}^2$ and ${H_0}^3$, the PI will select 
+10 up to 20 SNPs from subsets of candidate and control loci from each population for each species exhibiting similar attributes 
+(e.g., average heterozygosity).   Using genomic position of SNPs and the loblolly genome annotations, the PI will design 
+PCR primers to amplify the protein coding regions from each subsample ($n = 40 \text{trees}$), and each amplicon will be 
+sent for Sanger sequencing.  
+Once the sequences have been obtained and translated to amino acids, they will be aligned at the amino acid level using 
+standard tools such as MAFFT \citep{Katoh:2005ia} or MUSCLE \citep{Edgar:2004ic}.  From the alignment (back-translated 
+to DNA), $d_N/d_S$ will be estimated, per locus and per site per locus, using established maximum likelihood methods 
+\citep{Yang:2007ki}.
 
 \paragraph{Expected outcome and relevance}  Knowing whether or not genes containing SNPs are under positive ($d_N/d_S > 1$) or 
 purifying selection ($d_N/d_S < 1$) addresses a fundamental question surrounding maintenance of these polymorphisms in 
